--- a/litaval/stilar.css
+++ b/litaval/stilar.css
@@ -26,6 +26,19 @@ body {
 	display: none;
 }
 .vetur {
-	display: none;
+	background: linear-gradient(to top left,  blue, aqua);
+	position: fixed;
+	width: 100%;
+	height: 100%;
+  	margin: 0;
+  	padding: 0;
+  
+	display: flex; 
+	justify-content: center;
+	align-items: center;
+	align-content: center;
 }
-
+.vetur h1{
+	font-size: 5em;
+	color: white;
+}
